--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,26 @@ a {
   box-sizing: border-box;
 }
 
+input:focus {
+  outline: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin:0;
+  margin-left: 10px;
+}
+
+li::before {
+  content: '- '
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
