--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,12 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: white;
+  background: black;
+}
+
+html {
+  color-scheme: dark;
 }
 
 a {
@@ -22,7 +28,7 @@ input:focus {
 ul {
   list-style: none;
   padding: 0;
-  margin:0;
+  margin: 0;
   margin-left: 10px;
 }
 
@@ -30,17 +36,22 @@ li::before {
   content: '- '
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   html {
-    color-scheme: dark;
+    color-scheme: light;
   }
-  body {
-    color: white;
-    background: black;
+  body, html {
+    background: white;
+    color: black;
   }
 }
